# Games202Homework

./: .gitignore  README.md
Assignment2/homework2/assets/cubemap/Indoor/: transport.txt
Assignment2/homework2/assets/cubemap/Skybox/: light.txt
Assignment2/homework2/src/: engine.js
Assignment2/homework2/src/loads/: loadOBJ.js
Assignment2/homework2/src/materials/: PRTMaterial.js
Assignment2/homework2/src/renderers/: WebGLRenderer.js
Assignment2/homework2/src/shaders/PRTShader/: PRTFragment.glsl  PRTVertex.glsl
Assignment2/homework2/src/utils/: tools.js
Assignment2/prt/scenes/: prt.exr  prt.xml
Assignment2/prt/scenes/cubemap/CornellBox/: light.txt  transport.txt
Assignment2/prt/scenes/cubemap/GraceCathedral/: light.txt  transport.txt
Assignment2/prt/scenes/cubemap/Indoor/: light.txt
Assignment2/prt/scenes/cubemap/Skybox/: transport.txt
Assignment2/prt/src/: prt.cpp
homework3/src/: engine.js
homework3/src/shaders/ssrShader/: ssrFragment.glsl
homework4/homework4/assets/cubemap/GraceCathedral/: bunny_light.txt  bunny_transport.txt
homework4/homework4/assets/cubemap/Indoor/: bunny_light.txt  bunny_transport.txt
homework4/homework4/src/shaders/KullaContyShader/: KullaContyFragment.glsl
homework4/homework4/src/shaders/pbrShader/: PBRFragment.glsl
homework4/lut-gen/: Eavg_IS.cpp  Eavg_MC.cpp  Emu_IS.cpp  Emu_MC.cpp  test.sh
homework5/: CMakeLists.txt  build.sh
homework5/src/: denoiser.cpp  denoiser.h  main.cpp
hw1/homework1/src/: engine.js
hw1/homework1/src/lights/: DirectionalLight.js
hw1/homework1/src/loads/: loadOBJ.js
hw1/homework1/src/shaders/phongShader/: phongFragment.glsl  phongFragment2.glsl
